kube/product/product-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: product
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
  type: NodePort
